--- a/_config.yml
+++ b/_config.yml
@@ -10,39 +10,39 @@ baseurl: ""
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
 # otherwise, the layout language will use the default value of 'en'.
-lang: en
+lang: ko
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone:
+timezone: Asia/Seoul
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: shinychan95 # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: 자전거 타는 개발자 # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  언젠가 굵직한 가치관이 생기면 적도록 하자.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: "https://shinychan95.github.io"
 
 github:
-  username: github_username # change to your github username
+  username: shinychan95 # change to your github username
 
 twitter:
-  username: twitter_username # change to your twitter username
+  username: codybrightt # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: Chanyoung Kim
+  email: shinychan95@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your twitter homepage
-    - https://github.com/username # change to your github homepage
+    - https://twitter.com/codybrightt # change to your twitter homepage
+    - https://github.com/shinychan95 # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -80,7 +80,7 @@ theme_mode: # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: /assets/img/chanyoung.jpg
 
 # boolean type, the global switch for TOC in posts.
 toc: true
