--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ baseurl: ""
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
 # otherwise, the layout language will use the default value of 'en'.
-lang: ko
+lang: en
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
 timezone: Asia/Seoul
@@ -20,7 +20,7 @@ timezone: Asia/Seoul
 
 title: shinychan95 # the main title
 
-tagline: 자전거 타는 개발자 # it will display as the sub-title
+tagline: 언제 죽더라도 후회가 없도록 부끄럽지 않은 것들을 좀 더 남기고 싶다. </br> - 류이치 사카모토 - # it will display as the sub-title 
 
 description: >- # used by seo meta and the atom feed
   언젠가 굵직한 가치관이 생기면 적도록 하자.
