블로그 글 업데이트

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ timezone: Asia/Seoul
 
 title: shinychan95 # the main title
 
-tagline: 언제 죽더라도 후회가 없도록 부끄럽지 않은 것들을 좀 더 남기고 싶다. </br> - 류이치 사카모토 - # it will display as the sub-title 
+tagline: 언제 죽더라도 후회 없도록 부끄럽지 않은 것들을 더 남기고 싶다. </br> - 류이치 사카모토 - # it will display as the sub-title 
 
 description: >- # used by seo meta and the atom feed
   언젠가 굵직한 가치관이 생기면 적도록 하자.
