--- a/_config.yml
+++ b/_config.yml
@@ -92,8 +92,9 @@ comments:
     shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
   # utterances settings › https://utteranc.es/
   utterances:
-    repo: # <gh-username>/<repo>
-    issue_term: # < url | pathname | title | ...>
+    repo: shinychan95/shinychan95.github.io
+    issue_term: title
+    label: post
   # Giscus options › https://giscus.app
   giscus:
     repo: # <gh-username>/<repo>
